--- a/ReverseDesighn.vcxproj.filters
+++ b/ReverseDesighn.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="CMonsterSpawner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\Action\CAtack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
