--- a/ReverseDesighn.vcxproj
+++ b/ReverseDesighn.vcxproj
@@ -202,6 +202,8 @@
     <ClInclude Include="CRandomGenrator.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="IObsever.h" />
+    <ClInclude Include="ISubject.h" />
     <ClInclude Include="Map\CIndexMap.h" />
     <ClInclude Include="Map\CMap.h" />
     <ClInclude Include="Map\CMapGenerator.h" />
