Revert "Implementation of trow dice"
This reverts commit bd0b161a07b36de4152ad4954384298d1b9ce3af.

--- a/ReverseDesighn.vcxproj
+++ b/ReverseDesighn.vcxproj
@@ -169,6 +169,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\RogueTest\RogueTest\Map\CCell.cpp" />
     <ClCompile Include="Actor\Action\CActorAction.cpp" />
     <ClCompile Include="Actor\Action\CAtack.cpp" />
     <ClCompile Include="Actor\Action\CMoveOrAtack.cpp" />
